--- a/user-docs/user-documentation.org
+++ b/user-docs/user-documentation.org
@@ -1,144 +1,31 @@
 #+Title: UI 1.0 Toolkit
-#+Author:Ambika, Khushpreet, Soujanya and Madhavi
+#+Author: VLEAD
 #+Date:   [2014-09-18 Thursday]
 #+SETUPFILE: ./org-templates/level-0.org
 #+OPTIONS: ^:nil
 
-* Introduction to UI Toolkit
+* Using UI 1.0 Toolkit
+  
+The UI Toolkit consists of the Virtual Labs User Interface framework. Apart from the Virtual Labs UI 1.0 template, the toolkit also contains 
+helper scripts that extract the content of labs hosted in Collaborator Framework (Amrita format) to  UI 1.0 Framework. 
+The objective of using UI 1.0 Toolkit is to standardize the formats of all labs according to the Virtual-labs UI 1.0 framework. The UI 1.0 Toolkit 
+helps you achieve the following:
 
-The UI Toolkit consists of the Virtual Labs User Interface framework. Apart from the Virtual Labs UI 1.0 template, the toolkit also contains helper scripts that 
-extract the content of labs hosted in Amrita UI format to  UI 1.0 framework. 
-The objective of using UI Toolkit 1.0 is to standardize the formats of all labs according to the Virtual-labs UI 1.0 framework.
-
-** What is the purpose of the UI Toolkit?
-- *Unified look and feel:* The UI Toolkit offers a uniform user interface for authoring and interacting with the virtual labs. It also provides the labs a simple and uniform web interface and a homogeneous hosting framework.
-- *Coding standards:* The Toolkit ensures that lab developers follow good programming practices to make the code of the labs efficient and readable. 
+- *Unified look and feel:* The UI 1.0 Toolkit offers a uniform user interface for authoring and interacting with the virtual labs. 
+It also provides the labs a simple and uniform web interface and a homogeneous hosting framework.
+- *Coding standards:* The Toolkit ensures that lab developers follow good programming practices to make the code of the labs efficient 
+and readable. 
 - *Upgrading widgets and components:* The UI 1.0 template makes it easy for lab developers to modify and update widgets and/or components.  
-- *Provision for better versions of template:* In future, if advanced versions of the UI template are created, the lab developers can transfer the lab content automatically as per the newer versions.
+- *Provision for better versions of template:* In future, if advanced versions of the UI template are created, 
+the lab developers can transfer the lab content automatically as per the new versions.
 
-* Structure of the Lab
-Below are the instructions for a lab developer to structure the lab as per UI template 1.0.
+* How to Identify the template of your Lab?
+Before you start using the UI 1.0 Toolkit, you need to understand the structure of your lab. Your lab may be either in the Collaborative Framework 
+(Amrita Format) or is Unstrcutured (does not follow the UI 1.0 Template).
+If your lab is in Collaborative Format, then your lab URL should contain sub, brch, sim and cnt.
+Example (http://iitkgp.vlab.co.in/?sub=39&brch=124&sim=922&cnt=1)
 
-a) As a lab developer, after you have the content (theory, procedures, experiment, simulations, quiz, images, videos etc.) of your lab ready, you need to understand the structure of the lab according to UI template 1.0.
-
-[[./images/labs-structure.png]]
-
-The structure of the lab is displayed in the diagram above.
-
-b) The ui/ directory has =src= and =scripts= directory inside it.
-The ui/ directory has the following file structure:
-#+BEGIN_SRC python :tangle a.py
-ui/src/lab/ 	
-#+END_SRC
-All the source files of the lab are in this location. The index.html and default.html files are available as read-only because these files need not be edited. 
-If you want to edit the html pages, you should edit only the content.html file in ui/src/lab/ and the ui/src/lab/exp1/ directory.
-
-
-c) While adding new experiments, make sure you create new directories following the same structure under ui/src/lab/"EXPERIMENT-ID" and change the content.html in the same directory. Do not edit the files index.html and default.html in the same directory. The ui/src/lab directory also contains js, images, and css directories. These directories hold your own custom files. 	
-#+BEGIN_SRC python :tangle a.py
-ui/src/lib/ 	
-#+END_SRC
-All the library files (like MathJax, jQuery, modernizr) are in this directory.
-#+BEGIN_SRC python :tangle a.py
-ui/src/themes/ 	
-#+END_SRC
- 	
-d) You need to choose the blue-icon (uses the iitb style, which uses icons for sections) to design the theme of the lab. The current release also has a maroon-grid (which uses iiith style, which does not display icons). Of course, you are free to design your own theme, and place it in the themes directory.
-
-#+BEGIN_SRC python :tangle a.py
-ui/src/makefile 	
-#+END_SRC
-This file is used for building a release.
-
-#+BEGIN_SRC python :tangle a.py
-ui/scripts 	
-#+END_SRC
-
-The scripts folder should contain json file (lab descriptor), shell scripts, dependencies file.
-
-[[file:images/scripts.png]]  
-
-* The UI Template structure
-All the labs should follow the general structure of the template. 
-
-[[file:images/html-lab-page-design.png]]
-
-The template has three sections: Header, Article and Footer.
- 
-*Header* contains the logo and heading of the page.
-*Article* contains the content of the page. It can be further divided into sub-sections such as header, footer, content etc.
-*Footer* contains the acknowledgement and licensing details of the proprietary software used. The lab developer may add the logo of the institute here. Header and Footer remains the same for all the web pages.
-
-* How to use the template?
-There are two ways to convert a lab based on the cases below 
-** Case 1: Unstructured labs
-
-*Editing the file content.html placed within lab folder*
-
-This template features a demo of a science lab with a sample "simple pendulum" experiment. The following section will help the lab developer configure 
-this template as per his/her lab experiments.
-
-1) Mention the lab name under header and place the labs content under
-article followed by sections and order the articles accordingly.
-2) List out the experiments in content.html.
-This is how the html page of the lab should be structured and 
-we recommend to use these id's for the lab.
-
-The ui/src/lab/ directory contains three files:
-- index.html
-- default.html
-- content.html
-[[file:images/html-id-specific-lab-page-design.png]]
-
-*Editing content.html placed within each experiment folder*
-
-The same structure has been followed inside the ui/src/lab/"EXPERIMENT_ID" directory. The description and the read-write permits for those file are tabulated as follows :
-
-| file         | permissions | description      |
-|--------------+-------------+------------------|
-| index.html   | read-only   | home-page        |
-| default.html | read-only   | default-content  |
-| content.html | read-write  | editable-content |
-|--------------+-------------+------------------|
-
-
-[[file:images/html-id-specific-experiment-page-design.png]]
-
-This is how the html page of the experiment should be structured and 
-we recommend to use these ids for the experiments.
-
-*** Procedure for using scripts
-1) After the content is added, edit the "dependencies.txt" file and list out all the dependencies of the lab. 
-2) Based on the operating system, scripts will differ. Therefore, check the scripts being used. If the operating system used is "CentOS", use "centos-template" scripts otherwise use "ubuntu-template" scripts.
-3) Next, copy the scripts from the desired template (i.e. ubuntu-template or centos-template) and paste inside the template folder.
-4) Now open the terminal and change the directory to template and then scripts.
-5) Run the following commands
- #+BEGIN_SRC python :tangle a.py
-chmod 777 initialise.sh
-./initialise.sh
-#+END_SRC
-This script will automatically installs all the dependencies and will run the "make" file in order to generate a build folder.
-
-*Note:* if you come across any error while running the script, you need to login as root user and follow the same procedure.
-#+BEGIN_SRC python :tangle a.py
-sudo su 
-or
-su -
-#+END_SRC
-** Case 2: Labs hosted with Collaborator Framework (Amrita Format)
-To convert labs from the Collaborative framework (Amrita format) to UI 1.0, we have helper scripts in the UI
-toolkit that automates the process to a large extent, however, there are some changes 
-that need to be done manually.
-
-Below is the framework of labs in Collaborative (Amrita) format.
-
-[[file:images/amrita-format.jpg]]
-
-*** Necessary instructions for using scripts
-For example, let us chose a lab at random as below:
-(http://iitkgp.vlab.co.in/?sub=39&brch=124&sim=922&cnt=1)
-
-The breakup of the url is as per the following scheme:   
+The description of the above url is as follows:   
 |---------------------------------------------------+----------------------------------------------------|
 | url format                                        | example                                            |
 |---------------------------------------------------+----------------------------------------------------|
@@ -150,74 +37,128 @@ The breakup of the url is as per the following scheme:
 |---------------------------------------------------+----------------------------------------------------|
 | cnt=1(the breakup of pages under each experiment) | Introduction, Aim, Theory etc                      |
 |---------------------------------------------------+----------------------------------------------------|
-organise.sh is a shell script to get the content from the lab url and store it in an organized format as university->subject->branch->labs->experiments.
 
-Now the structure of the lab is analyzed and the script breaks 
-up the url accordingly and creates the folders recursively in an organized format.
+If your lab does not follow this format then your lab is in Unstructured Format.
+* How to Transform your Lab to the UI 1.0 Template?
+As discussed above, your lab may be in either the Collaborative Format (Amrita framework) or unstructured. Depending on the current 
+structure of your lab, you need to follow the steps below to convert your lab. 
+** Transform Unstructured Labs
+
+In the LIK, go to =ui-1.0-toolkit/src/template/src/lab/exp1/content.html=. This =content.html= contains "simple pendulum" experiment by default.
+Follow the instructions to transform default experiment into one experiment of your lab. 
 
 
-*** Procedure for using scripts
+*Step 1:* Mention the lab name under =header= and place your experiment name under =article= and replace the content accordingly 
+in each =section= for Aim, Theory and Procedure etc.
+
+
+*Step 2:* Follow the step 1 for all experiments of your lab. List out the experiment names in =ui-1.0-toolkit/src/template/src/lab/content.html=.
+Give links to the listed experiment names. 
+
+This is how the html page of the experiment should be structured.
+
+[[./images/labs-structure.png]]
+
+*** How to Validate that your lab confirms to UI 1.0 template?
+*Step 1:* Based on the operating system, scripts will differ. Therefore, check the scripts being used. If the operating system used is "CentOS", 
+use =ui-1.0-toolkit/scripts/centos-scripts= otherwise use =ui-1.0-toolkit/scripts/ubuntu-scripts= scripts.
+
+*Step 2:* Copy the =scripts= from the desired template (i.e. ubuntu-template or centos-template) and paste inside the =ui-1.0-toolkit/src/template=.
+
+*Step 3:* After you have updated the content as per the UI template, edit the =ui-1.0-toolkit/src/template/scripts/dependencies.txt= 
+file and list out all the dependencies of the lab. 
+
+*Step 4:* Run the following command
+#+BEGIN_SRC  :
+cd lik/ui-1.0-toolkit/src/template/scripts
+#+END_SRC
+This command will change the directory.
+
+*Step 5:* Run the following command
+ #+BEGIN_SRC :
+chmod 777 initialise.sh
+#+END_SRC
+This command will give all (read,write and execute) permissions to =initialise.sh=.
+
+*Step 6:* Run the following command
+#+BEGIN_SRC :
+./initialize.sh
+#+END_SRC
+This will automatically install all the dependencies and will run the =make= file as well as generate =build= folder and place =build= inside apache server.
+It will automatically runs and displays the default experiment in browser.
+
+*Step 7:* Click on =simple pendulum= link to display your lab. 
+
+** Transform Labs in Collaborator Framework (Amrita Format)
+To convert labs from the Collaborative framework (Amrita format) to UI 1.0, we have helper scripts in the UI
+toolkit that automates the process to a large extent, however, there are some changes 
+that need to be done manually.
+
+*** Instructions for using scripts
 The following instructions will help port content from the Collaborative format (Amrita format) theme to Blue-icon theme.
-**** *Check out the scripts from github*
- Check out the lik (lab integration kit) from github
 
-#+BEGIN_SRC python :tangle a.py
+*Step 1:* Run the following command
+#+BEGIN_SRC : 
 git clone https://github.com/vlead/ui-1.0-tool-kit.git
 #+END_SRC
-Find the scripts from following path:
+This command will check out the lik (lab integration kit) from github.
 
-Go to: ui-1.0-tool-kit->scripts/
-
-**** *Download and store the content* 
- Create a folder called "map"
-#+BEGIN_SRC python :tangle a.py
+*Step 2:* Run the following command 
+#+BEGIN_SRC :
 > mkdir map
 #+END_SRC
+This command will Create a folder called =map=.
 
-**** *Move into the folder map*
-#+BEGIN_SRC python :tangle a.py
+*Step 3:* Run the following command
+#+BEGIN_SRC :
 > cd map
 #+END_SRC
+This will change the directory to =map=.
 
-**** *Getting the content from desired url*
-Run the wget command under the some directory.
-#+BEGIN_SRC python :tangle a.py
+*Step 4:* Run the wget command inside the same directory.
+#+BEGIN_SRC :
 > wget -r -e robots=off http://iitkgp.vlabs.co.in
 #+END_SRC
+This command will get all the labs from all the disciplines of that particular institute.
 
-*** Organize the downloaded content
-Run the organise.sh file and prior to that give it execute permission.
+*Step 5:* Copy =organise.sh= from =lik/ui-1.o-toolkit/scripts/automated-scripts= and place inside =map= directory.
 
-#+BEGIN_SRC python :tangle a.py
+*Step 6:* Run the following command:
+#+BEGIN_SRC :
 > chmod 777 organise.sh
-> ./organize.sh
+> ./organize.sh 
 #+END_SRC
-Run the following command:
-#+BEGIN_SRC python :tangle a.py
+This command will give all the permissions to =organise.sh= and will automatically organise the directories in the form of folders with three 
+hierarchies with random numbers as names of these folders. Usually first, second and third hierarchy represents all the disciplines, labs and
+experiments of that particular institute.
+
+*Step 7:* Copy the =kit= folder from =lik/ui-1.o-toolkit/scripts/automated-scripts= and place inside each experiment folder.
+
+*Step 8:* Run the following command: 
+#+BEGIN_SRC :
+> cd kit
+#+END_SRC
+This will change the directory to =kit=.
+
+*Step 9:* Run the following command:
+#+BEGIN_SRC :
 > ./all.py 
 #+END_SRC
-*Note:* if any error occurs while running this script then log in as a root user and follow the same procedure.
-#+BEGIN_SRC python :tangle a.py
-sudo su 
-or
-su -
-#+END_SRC
-*Note* Follow the same procedure for every experiment. After converting all the experiments, rename the "exp1" folder experiment-wise 
+This will run the =make= file as well as generate =build= folder and place =build= inside apache server.
+It will automatically runs and displays the default experiment in browser.
+
+*Step 10:* Click on =simple pendulum= link to display your lab. 
+
+
+*Step 11:* Follow the same procedure for every experiment. After converting all the experiments, rename the "exp1" folder experiment-wise 
 such as: exp1, exp2, exp3 so on and place them inside lab folder. Content will open in the browser with Simple pendulum sample experiment,
 change the experiment name and click on it. The template should be ready with the content added, but the 
 images at each tab may be missing. It may be like this:
 
-[[file:images/screenshot2.png]]
-
-*Note:* In such a case, copy the images from the /template/src/lab/images and 
-place them in the same path that the experiment follows. 
-
-*** Observe the UI transfer(mapping)
+*** Observe the UI transfer (mapping)
 This is how the lab is structured after conversion.
-
 
 [[file:images/screenshot1.png]]  
 
 
 
-     
