--- a/user-docs/index.org
+++ b/user-docs/index.org
@@ -65,28 +65,30 @@ This is how you need to structure the html page of the experiment.
 *Step 1:* Based on the operating system, the scripts will differ. Therefore, check the scripts being used. If the operating system used is "CentOS", 
 use =ui-1.0-toolkit/scripts/centos-scripts=. If the OS is Ubuntu, use =ui-1.0-toolkit/scripts/ubuntu-scripts= scripts.
 
-*Step 2:* Copy the =scripts= from the path above and paste inside =ui-1.0-toolkit/src/template=.
+*Step 2:* Copy all the contents of the =scripts= folder from the path above and paste inside =ui-1.0-toolkit/src/template=.
 
 *Step 3:* After you have updated the content as per the UI template, edit the file =ui-1.0-toolkit/src/template/scripts/dependencies.txt= and list out all the dependencies of the lab. You will need these dependencies later during the auto-deployment of the lab. 
 
 *Step 4:* Run the following command
 #+BEGIN_SRC  :
-cd lik/ui-1.0-toolkit/src/template/scripts
+cd ui-1.0-toolkit/src/template/scripts
 #+END_SRC
 This command will change the directory.
 
 *Step 5:* Run the following command
  #+BEGIN_SRC :
-chmod 777 initialise.sh
+chmod 777 initialize.sh
 #+END_SRC
-This command will give all (read,write and execute) permissions to =initialise.sh=.
+This command will give all (read,write and execute) permissions to =initialize.sh=.
 
 *Step 6:* Run the following command
 #+BEGIN_SRC :
 ./initialize.sh
 #+END_SRC
 This will automatically install the dependencies and run the =make= file as well as generate the =build= folder and place =build= inside the Apache server.
-It will automatically run and display the default experiment in the browser.
+It will automatically run and display the default experiment in the browser. In case you get permissions denied error, try to run the same with 
+sudo su (as a root). In case of proxy error, set proxy value in =ui-1.0-toolkit/src/template/scripts/config.sh= accordingly. Also, everytime you
+ make change in =content.html=, you need to run =./initialize.sh=.
 
 *Step 7:* Finally, click on the =simple pendulum= link to display your lab. 
 
@@ -115,24 +117,28 @@ This command will Create a folder called =map=.
 #+END_SRC
 This will change the directory to =map=.
 
-*Step 4:* Run the wget command inside the same directory.
+*Step 4:* To get the sources of your institute, run the wget command inside the same directory.
 #+BEGIN_SRC :
 > wget -r -e robots=off http://iitkgp.vlabs.co.in
 #+END_SRC
-This command will get all the labs from all the disciplines of that particular institute.
+This command will get all the labs from all the disciplines of IIT-KGP. Replace this url with your own institute's url.
 
-*Step 5:* Copy =organise.sh= from =lik/ui-1.o-toolkit/scripts/automated-scripts= and place inside =map= directory.
+*Step 5:* Copy =organise.sh= from =ui-1.o-toolkit/scripts/automated-scripts= and place inside =map= directory.
 
 *Step 6:* Run the following command:
 #+BEGIN_SRC :
 > chmod 777 organise.sh
-> ./organize.sh 
+> ./organise.sh 
 #+END_SRC
 This command will give all the permissions to =organise.sh= and will automatically organise the directories in the form of folders with three 
 hierarchies with random numbers as names of these folders. Usually first, second and third hierarchy represents all the disciplines, labs and
-experiments of that particular institute.
+experiments of that particular institute. 
 
-*Step 7:* Copy the =kit= folder from =lik/ui-1.o-toolkit/scripts/automated-scripts= and place inside each experiment folder.
+In case you get an error that resembles to =index*\?sub*=, then open =organise.sh= and replace the line 
+=sublist=$(ls -1 index*\?sub* | cut -d'&' -f1 | cut -d'=' -f2 | sort -u)=
+with =sublist=$(ls -1 index*\_sub* | cut -d'&' -f1 | cut -d'=' -f2 | sort -u)=
+
+*Step 7:* Copy the =kit= folder from =ui-1.o-toolkit/scripts/automated-scripts= and place inside each experiment folder.
 
 *Step 8:* Run the following command: 
 #+BEGIN_SRC :
@@ -142,7 +148,7 @@ This will change the directory to =kit=.
 
 *Step 9:* Run the following command:
 #+BEGIN_SRC :
-> ./all.py 
+> ./all.sh
 #+END_SRC
 This will run the =make= file as well as generate the =build= folder and place =build= inside the Apache server.
 It will automatically run and display the default experiment in the browser.
